MDEV-26774 Compression provider unloading at runtime has no effect but doesn't produce a warning